# waffle

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.17CB59838FE041CF.idx  ring_buffer_tests.cpp.728D7D574362792F.idx  waffle_tests.cpp.4866485F7FA47FC1.idx
.devcontainer/: devcontainer.json
.github/workflows/: cpp_ci.yml
benchmarks/: CMakeLists.txt  ring_buffer_benchmarks.cpp
docs/: Intenal Design and Architecture.md  design-philosophy.md
examples/: CMakeLists.txt  simple_usage.cpp
helpers/: CMakeLists.txt
helpers/include/waffle/helpers/: mpsc_ring_buffer.hpp
include/waffle/: tracer.hpp  waffle.hpp  waffle_common_types.hpp  waffle_context.hpp  waffle_core.hpp  waffle_core_detail.hpp  waffle_detail_utils.hpp  waffle_tracelet.hpp
src/: CMakeLists.txt
src/waffle/: waffle_core.cpp
src/waffle/consumer/: consumer.hpp  iconsumer.hpp
src/waffle/helpers/: mpsc_ring_buffer.hpp
src/waffle/model/: full_record.cpp  full_record.hpp
tests/: CMakeLists.txt  ring_buffer_tests.cpp  waffle_tests.cpp
